Dev : Page routing added, basic flow implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-
-<div id="titleBox">
+<router-outlet></router-outlet>
+<!-- <div id="titleBox">
   <h1>{{title}}</h1>
 </div>
 
 <div id="mainBox">
 
   <br>
-  <div id="formBox">
-    <form action="index.php"><!--or is it _self -->
-      <label for="user">Username:   </label>
+  <div id="formBox"> -->
+    <!-- <form action="index.php"><!--or is it _self -->
+      <!-- <label for="user">Username:   </label>
       <input type="text" id="username" name="username"><br>
       <label for="pass">Password:   </label>
       <input type="password" id="password" name="password"><br>
@@ -21,4 +21,4 @@
       <p>Login Successful!</p>
       <app-home></app-home>
   </div>
-</div>
+</div> --> 
