--- a/src/app/home/expimagelisting/expimagelisting.component.html
+++ b/src/app/home/expimagelisting/expimagelisting.component.html
@@ -1,12 +1,15 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="row">
-     
-        <ngx-gallery
-          [options]="galleryOptions"
-          [images]="galleryImages"
-          class="ngx-gallery"
-        ></ngx-gallery>
-    </div>
+    <mat-grid-list cols="4" rowHeight="1:1" >
+        <mat-grid-tile 
+          *ngFor="let item of list; let index = index;"
+          (click)="onImageClicked(item)"
+          style="background-color: gainsboro;">
+          
+          <img src="https://picsum.photos/200/{{300 + index}}" alt="" style="object-fit: cover; width: 100%; height: 100%;">
+      
+      
+        </mat-grid-tile>
+      </mat-grid-list>
   </div>
 </div>
