--- a/src/app/home/expimagelisting/expimagelisting.component.html
+++ b/src/app/home/expimagelisting/expimagelisting.component.html
@@ -1,15 +1,17 @@
 <div class="main-content">
   <div class="container-fluid">
+<app-imageviewer [imageURL]="imageURL" [open]="viewerOpen" (close)="viewerOpen = false"></app-imageviewer>
     <mat-grid-list cols="4" rowHeight="1:1" >
         <mat-grid-tile 
           *ngFor="let item of list; let index = index;"
           (click)="onImageClicked(item)"
           style="background-color: gainsboro;">
           
-          <img src="https://picsum.photos/200/{{300 + index}}" alt="" style="object-fit: cover; width: 100%; height: 100%;">
+          <img src="{{item.imageUrl}}" alt="" style="object-fit: cover; width: 100%; height: 100%;">
       
       
         </mat-grid-tile>
       </mat-grid-list>
   </div>
+
 </div>
