--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
                             </div>
                          
                           
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Login</button>
+                            <button mat-raised-button type="button"  class="btn btn-danger pull-right"  (click)="onLoginBtnPressed()">Login</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
