--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,14 +12,14 @@
                             <div class="row top-margin">
                                 <div class="col-md-12" >
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Username" type="text">
+                                    <input matInput placeholder="Username" type="text" [(ngModel)]="userName">
                                   </mat-form-field>
                                 </div>
                             </div>
                             <div class="row top-margin">
                               <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Password" type="password">
+                                    <input matInput placeholder="Password" type="password" [(ngModel)]="userPassword">
                                   </mat-form-field>
                                 </div>
                             </div>
