--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,42 +1,43 @@
 <div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="card card-stats">
-                    <div class="card-header card-header-warning card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">content_copy</i>
-                        </div>
-                        <p class="card-category">Used Space</p>
-                        <h3 class="card-title">49/50
-                            <small>GB</small>
-                        </h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            <i class="material-icons text-danger">warning</i>
-                            <a href="javascript:void(0)">Get More Space...</a>
-                        </div>
-                    </div>
-                </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-warning card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">content_copy</i>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="card card-stats">
-                    <div class="card-header card-header-success card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">image</i>
-                        </div>
-                        <p class="card-category">Collected Images</p>
-                        <h3 class="card-title">5</h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            <i class="material-icons">date_range</i> March 15th, 2022
-                        </div>
-                    </div>
-                </div>
+            <p class="card-category">Used Space</p>
+            <h3 class="card-title">
+              49/50
+              <small>GB</small>
+            </h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons text-danger">warning</i>
+              <a href="javascript:void(0)">Get More Space...</a>
             </div>
-           <!--  <div class="col-lg-3 col-md-6 col-sm-6">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-success card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">image</i>
+            </div>
+            <p class="card-category">Collected Images</p>
+            <h3 class="card-title">5</h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons">date_range</i> March 15th, 2022
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="card card-stats">
                     <div class="card-header card-header-danger card-header-icon">
                         <div class="card-icon">
@@ -68,22 +69,44 @@
                     </div>
                 </div>
             </div> -->
-            <div class=" col-10">
-                <div class="card">
-                  <div class="card-header card-header-danger">
-                    <h4 class="card-title">Sem Controller Bot</h4>
-                    <p class="card-category">Interact with Bot to configure the SEM</p>
-                  </div>
-                  <div class="card-body table-responsive">
-                    <div>
-                        <p>Chat bot will be integrated, here!!</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title">Sem Controller Bot</h4>
+            <p class="card-category">Chat with sem controller to perform below actions</p>
+          </div>
+          <div class="card-body table-responsive">
+            <div>
+              <p>Activate Instrument</p>
+              <p>Load Sample</p>
+              <p>Unload Sample</p>
+              <p>Move Sample to NavCam</p>
+              <p>Acquire Image</p>
+              <p>Set Size</p>
+              <p>Set Frame</p>
+              <p>Save Image</p>
+              <p>Move Sample to SEM</p>
+              <p>Move to Position</p>
+            </div>
+          </div>
         </div>
-       
-       
+      </div>
+
+      <div class="col-6">
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title">Sem Controller Bot</h4>
+            <p class="card-category">Send message</p>
+          </div>
+          <div class="card-body table-responsive">
+            <app-chat>
+              
+            </app-chat>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  
+</div>
