--- a/src/app/imageviewer/imageviewer.component.html
+++ b/src/app/imageviewer/imageviewer.component.html
@@ -1,8 +1,18 @@
 <div *ngIf="open" class="viewer-container">
-    <div class="viewer-content">
+  <div class="viewer-content">
+    
+    <div class="row">
       <a class="close-button" (click)="close.emit()">
-          <i class="fa fas fa-chevron-left fa-5x fa-fw left-icon"></i>Close Image
+        <i class="fa fas fa-chevron-left fa-5x fa-fw left-icon"></i>Close Image
       </a>
-    <img class="main-img" [src]="imageURL"/>
     </div>
+    <div class="row">
+      <a class="close-button" (click)="sendForAnalytics.emit()">
+        <i class="fa fas fa-chevron-left fa-5x fa-fw left-icon"></i>Send For
+        Analytics
+      </a>
+    </div>
+
+    <img class="main-img" src="data:image/gif;base64,{{ imageURL }}" />
   </div>
+</div>
