dev : img listing changed

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -72,12 +72,12 @@
       <div class="col-10">
         <div class="card">
           <div class="card-header card-header-danger">
-            <h4 class="card-title">Sem Controller Bot</h4>
-            <p class="card-category">Interact with Bot to configure the SEM</p>
+            <h4 class="card-title">Sem Controller </h4>
+            <p class="card-category">Select an action to configure the SEM</p>
           </div>
           <div class="card-body table-responsive">
             <div>
-              <p>Chat bot will be integrated, here!!</p>
+              <p>Recommended actions</p>
             </div>
           </div>
         </div>
