dev : confirmation dialog added

--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -1,11 +1,11 @@
 <div class="main-content">
     <div class="container-fluid">
-      <app-imageviewer
+      <!-- <app-imageviewer
         [imageURL]="imageURLOrBuffer"
         [open]="viewerOpen"
         (close)="viewerOpen = false"
         (sendForAnalytics)="sendCurrentImageForAnalytics()"
-      ></app-imageviewer>
+      ></app-imageviewer> -->
         <div cols="4" rowHeight="1:1">
             <li *ngFor="let html of htmlString">
                 <button mat-raised-button (click)="getImage($event)">{{html}}</button>
