--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div> -->
-      <div class="col-10">
+      <!-- <div class="col-10">
         <div class="card">
           <div class="card-header card-header-danger">
             <h4 class="card-title">Sem Controller </h4>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
