--- a/src/app/home/imagedirlisting/imagedirlisting.component.css
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.css
@@ -1,3 +1,9 @@
 button{
     margin-top: 1em;
 }
+
+.md-fab-bottom-right{
+    position: fixed !important;
+    right: 15px;
+    bottom: 15px; /* Add this and change value to set the margin you want */
+}
