--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -1,23 +1,83 @@
 <div>
   <div class="main-content">
     <div class="container-fluid">
-      <!-- <app-imageviewer
+      <app-imageviewer
         [imageURL]="imageURLOrBuffer"
         [open]="viewerOpen"
         (close)="viewerOpen = false"
         (sendForAnalytics)="sendCurrentImageForAnalytics()"
-      ></app-imageviewer> -->
-      <div cols="4" rowHeight="1:1">
-        <li *ngFor="let html of htmlString">
-          <button mat-raised-button (click)="getImage($event)">
-            {{ html }}
-          </button>
-        </li>
+      ></app-imageviewer>
+      <!-- <div class="row">
+        <div cols="4" rowHeight="1:1">
+          <li *ngFor="let html of htmlString">
+            <button mat-raised-button (click)="getImage($event)">
+              {{ html }}
+            </button>
+          </li>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="col-lg-10 col-md-12">
+          <div class="card">
+            <div class="card-header card-header-danger">
+              <h4 class="card-title">File Stats</h4>
+              <p class="card-category">Available files</p>
+            </div>
+            <div class="card-body table-responsive">
+              <table class="table table-hover">
+                <thead class="text">
+                  <th>File Name</th>
+                  <th>Status</th>
+                  <th>Output (Dice Score)</th>
+                  <th>Action</th>
+                  <th>Share with everybody</th>
+                  <th>Visualize</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <a
+                        class="clickable"
+                        [routerLink]=""
+                        (click)="getImage($event)"
+                        >File.mat</a
+                      >
+                    </td>
+                    <td>Analyzed</td>
+                    <td>0.532</td>
+                    <td>
+                      <a
+                        class="clickable"
+                        [routerLink]=""
+                        (click)="sendToAnalytics($event)"
+                        >Send to Analytics</a
+                      >
+                    </td>
+                    <td>Share with everybody</td>
+                    <td>
+                      <a
+                        class="clickable"
+                        [routerLink]=""
+                        (click)="getImage($event)"
+                        >Visualize</a
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <div class="example-button-container md-fab-bottom-right">
-    <button mat-fab color="warn" aria-label="Example icon button with a home icon" (click)="showRecommendation()">
+    <button
+      mat-fab
+      color="warn"
+      aria-label="Example icon button with a home icon"
+      (click)="showRecommendation()"
+    >
       <mat-icon>loop</mat-icon>
     </button>
   </div>
