dev : integrating tif decoder and encoder

--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -39,7 +39,7 @@
                       <a
                         class="clickable"
                         [routerLink]=""
-                        (click)="getImage($event)"
+                        (click)="showFileDetail()"
                         >File.mat</a
                       >
                     </td>
