dev : recommendation flow added

--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </div>
-  <div class="example-button-container md-fab-bottom-right">
+  <div class="example-button-container md-fab-bottom-right" *ngIf="this.recommendationAvailable">
     <button
       mat-fab
       color="warn"
