--- a/src/app/imageviewer/imageviewer.component.html
+++ b/src/app/imageviewer/imageviewer.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
 
-    <img class="main-img" src="data:image/gif;base64,{{ imageURL }}" />
-    <!-- <img class="main-img" src="https://people.math.sc.edu/Burkardt/data/tif/at3_1m4_01.tif" /> -->
+    <!-- <img class="main-img" src="data:image/gif;base64,{{ imageURL }}" /> -->
+    <img class="main-img" src="{{imageURL}}" />
   </div>
 </div>
