dev : radio button fixes

--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -20,7 +20,7 @@
         <div class="col-lg-10 col-md-12">
           <div class="card">
             <div class="card-header card-header-danger">
-              <h4 class="card-title">File Stats</h4>
+              <h4 class="card-title">Experiment Status</h4>
               <p class="card-category">Available files</p>
             </div>
             <div class="card-body table-responsive">
