--- a/src/app/imageviewer/imageviewer.component.html
+++ b/src/app/imageviewer/imageviewer.component.html
@@ -8,8 +8,7 @@
     </div>
     <div class="row">
       <a class="close-button" (click)="sendForAnalytics.emit()">
-        <i class="fa fas fa-chevron-left fa-5x fa-fw left-icon"></i>Send For
-        Analytics
+        <i class="fa fas fa-chevron-left fa-5x fa-fw left-icon"></i>Close
       </a>
     </div>
 
