--- a/src/app/components/dialogs/recommendationdialog/recommendationdialog.component.html
+++ b/src/app/components/dialogs/recommendationdialog/recommendationdialog.component.html
@@ -15,7 +15,7 @@
 
       <div class="form-check form-check-radio"  *ngFor="let action of val.actionsOptions;  let  btnIndex = index">
         <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="action.actionOptionId" >
+            <input class="form-check-input" type="radio" name="{{val.actionId}}" id="{{action.actionOptionId}}" value="1" >
             {{action.actionName}}
             <span class="circle">
                 <span class="check"></span>
