dev : minor fixes

--- a/src/app/home/imagedirlisting/imagedirlisting.component.html
+++ b/src/app/home/imagedirlisting/imagedirlisting.component.html
@@ -31,7 +31,7 @@
                   <th>Output (Dice Score)</th>
                   <th>Action</th>
                   <th>Share with everybody</th>
-                  <th>Visualize</th>
+                  <th>Preview</th>
                 </thead>
                 <tbody>
                   <tr  *ngFor="let item of fileList; let index = index;">
